# tetris

./: README.md  cabal.nix  default.nix  flake.nix  shell.nix  tetris.cabal
app/: Main.hs
src/: Scorer.hs  Solve.hs  Solve1.hs  Solve2.hs  Tetris.hs
src/UI/: Game.hs  PickLevel.hs
test/: TetrisSpec.hs
