name:                tetris
version:             0.1.4.1
homepage:            https://github.com/samtay/tetris#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Tay
maintainer:          sam.chong.tay@pm.me
copyright:           2022 Sam Tay
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tetris
                     , Solve
                     , Scorer
                     , UI.PickLevel
                     , UI.Game
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , lens
                     , linear
                     , random
                     , transformers
                     , vty
                     , mtl
                     , async
                     , criterion
                     , aeson
                     , splitmix
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-unused-imports -Wincomplete-patterns -fno-warn-name-shadowing -Wno-orphans

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    TetrisSpec
  hs-source-dirs: test
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      base
    , hspec
    , hspec-discover
    , tetris
    , QuickCheck
  default-language: Haskell2010

executable tetris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , aeson
                     , tetris
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamTay/tetris
